feat: add comprehensive billing system with subscription management
- Add billing module with Mercado Pago and Lemon Squeezy integration
- Implement subscription plans (FREE, PRO, PREMIUM) with usage limits
- Add database models for subscriptions, payments, and usage records
- Create billing endpoints for checkout, subscription management, and usage tracking
- Add frontend pages for pricing, billing settings, and dashboard
- Implement JWT refresh token functionality
- Add responsive mobile sidebar with menu toggle
- Update environment variables with billing provider configurations

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,29 @@ RATE_LIMIT_MAX=100
 
 # Node Environment
 NODE_ENV=development
+
+# ===========================================
+# BILLING - Mercado Pago (Argentina/LATAM)
+# ===========================================
+MERCADOPAGO_ACCESS_TOKEN=your-mercadopago-access-token
+MERCADOPAGO_PUBLIC_KEY=your-mercadopago-public-key
+MERCADOPAGO_WEBHOOK_SECRET=your-mercadopago-webhook-secret
+
+# ===========================================
+# BILLING - Lemon Squeezy (International)
+# ===========================================
+LEMONSQUEEZY_API_KEY=your-lemonsqueezy-api-key
+LEMONSQUEEZY_STORE_ID=your-store-id
+LEMONSQUEEZY_WEBHOOK_SECRET=your-lemonsqueezy-webhook-secret
+
+# Lemon Squeezy Product Variant IDs
+LEMONSQUEEZY_PRO_MONTHLY_VARIANT_ID=
+LEMONSQUEEZY_PRO_YEARLY_VARIANT_ID=
+LEMONSQUEEZY_PREMIUM_MONTHLY_VARIANT_ID=
+LEMONSQUEEZY_PREMIUM_YEARLY_VARIANT_ID=
+
+# ===========================================
+# APP URLs
+# ===========================================
+API_URL=http://localhost:3001
+NEXT_PUBLIC_APP_URL=http://localhost:3000
