--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "zod": "^3.22.0",
+    "mercadopago": "^2.0.15",
     "@campusmind/shared": "workspace:*"
   },
   "devDependencies": {
